--- a/style.css
+++ b/style.css
@@ -114,7 +114,20 @@ and (-webkit-min-device-pixel-ratio: 2) {
 		width:100%;
 	}
 }
-
+@media only screen and (max-width : 414px) {
+    .body ,.background{
+        height: 100%;
+    }
+	#intro{
+		width:100%;
+	}
+	#name{
+		font-size:50px;
+	}
+	.project-card{
+		width:100%;
+	}
+}
 /* Big smartphones (portrait) (ie: Galaxy 3 has 360)*/
 @media only screen and (max-width : 640px) {
     .body ,.background{
