--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ and (-webkit-min-device-pixel-ratio: 2) {
         height: 100%;
     }
 	#intro{
-		width:100%;
+		width:auto;
 	}
 	#name{
 		font-size:25px;
