--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body{
 }
 #name{
 	margin-top:-125px;
-	font-size: 7vw;">
+	font-size: 7vw;
 }
 #redirect-Tabs{
 	margin-top:-115px;
@@ -54,7 +54,7 @@ body{
 	border: 1px solid;
 	box-shadow: 5px 5px 5px 5px gray;
 	margin-left:96%; 
-	max-width:60px; 
+	width:60px; 
 	height:50px;
 }
 .project-card{
