--- a/style.css
+++ b/style.css
@@ -199,20 +199,20 @@ body{
 		margin-top:2px;
 	}
 }
-@media only screen and (max-width : 1443px) {
+@media only screen and (max-width: 1366px) {
     .body{
-        height: 1450px;
+        height: 1024px;
     }
-	#sendUp{
+		#sendUp{
 		margin-left:95%; 
 		margin-bottom:-130px;
 	}
-	.Ppic{
-		width:250px;
-		height:250px;
-	}
 	#footerBox{
-		margin-bottom:-75px;
+		margin-top:130px;
+	}
+	.Ppic{
+		width:300px;
+		height:300px;
 	}
 	#name{
 	margin-top:1px;
@@ -221,7 +221,8 @@ body{
 	#redirect-Tabs{
 		margin-top:2px;
 	}
-/*---------FOR THE HEIGHTS------------*/
+}
+/*---------FOR THE HEIGHTS------------
 @media only screen and (max-height : 812px) {
     .body{
         height: 1024px;
@@ -257,29 +258,6 @@ body{
 		margin-top:2px;
 	}
 }
-@media only screen and (max-width: 1366px) {
-    .body{
-        height: 1024px;
-    }
-		#sendUp{
-		margin-left:95%; 
-		margin-bottom:-130px;
-	}
-	#footerBox{
-		margin-top:130px;
-	}
-	.Ppic{
-		width:300px;
-		height:300px;
-	}
-	#name{
-	margin-top:1px;
-	height:auto;
-	}
-	#redirect-Tabs{
-		margin-top:2px;
-	}
-}
 @media only screen and (max-height : 1366px) {
     .body{
         height: 1024px;
@@ -299,3 +277,4 @@ body{
 		margin-top:2px;
 	}
 }
+------------*/
