--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body{
 	font-size: 7vw;
 }
 #redirect-Tabs{
+	margin-left:1px;
 	margin-top:-20px;
 	word-spacing:7px;
 }
@@ -117,7 +118,7 @@ body{
 	color: white;
 }
 
-@media only screen and (max-width : 376px) {
+@media only screen and (min-width : 320px) {
     .body{
         height: auto;
     }
@@ -125,9 +126,28 @@ body{
 		margin-top:-2px;
 	}
 	#sendUp{
-		width:50px;
-		margin-left:75%; 
-		margin-bottom:-130px;
+		margin-left:78%; 
+	}
+	.Ppic{
+		width:145px;
+		height:145px;
+	}
+	#name{
+		margin-top:8px;
+	}
+	#redirect-Tabs{
+		margin-top:10px;
+	}
+
+@media only screen and (min-width : 375px) {
+    .body{
+        height: auto;
+    }
+	#intro{
+		margin-top:-2px;
+	}
+	#sendUp{
+		margin-left:83%;
 	}
 	.Ppic{
 		width:175px;
@@ -140,141 +160,73 @@ body{
 		margin-top:10px;
 	}
 
-}@media only screen and (max-width : 426px) {
+}@media only screen and (min-width : 425px) {
     .body{
         height: auto;
-    }
-	#sendUp{
-		margin-left:85%; 
-		margin-bottom:-130px;
-	}
-	.Ppic{
-		width:175px;
-		height:175px;
-	}
-	#name{
-		margin-top:8px;
-	}
-	#redirect-Tabs{
-		margin-top:10px;
-	}
-
-}
-@media only screen and (max-width : 770px) {
-    .body{
-        height: auto;
-    }
-	#sendUp{
-		margin-left:90%; 
-		margin-bottom:-130px;
-	}
-	.Ppic{
-		width:200px;
-		height:200px;
-	}
-	#name{
-	margin-top:1px;
-	}
-	#redirect-Tabs{
-		margin-top:2px;
-	}
-}
-@media only screen and (max-width : 1024px) {
-    .body{
-        height: auto;
-    }
-	#sendUp{
-		margin-left:90%; 
-		margin-bottom:-130px;
-	}
-	.Ppic{
-		width:200px;
-		height:200px;
-	}
-	#name{
-	margin-top:1px;
-	height:auto;
-	}
-	#redirect-Tabs{
-		margin-top:2px;
-	}
-}
-@media only screen and (max-width: 1366px) {
-    .body{
-        height: 1024px;
-    }
-		#sendUp{
-		margin-left:95%; 
-		margin-bottom:-130px;
-	}
-	#footerBox{
-		margin-top:130px;
-	}
-	.Ppic{
-		width:300px;
-		height:300px;
-	}
-	#name{
-	margin-top:1px;
-	height:auto;
-	}
-	#redirect-Tabs{
-		margin-top:2px;
-	}
-}
-/*---------FOR THE HEIGHTS------------
-@media only screen and (max-height : 812px) {
-    .body{
-        height: 1024px;
     }
 	#footerBox{
 		margin-top:46px;
 	}
+	#sendUp{
+		margin-left:85%;
+	}
+	.Ppic{
+		width:175px;
+		height:175px;
+	}
+	#name{
+		margin-top:8px;
+	}
+	#redirect-Tabs{
+		margin-top:10px;
+	}
+
+}
+@media only screen and (min-width : 768px) {
+    .body{
+        height: auto;
+    }
+	#sendUp{
+		margin-left:91%;
+		margin-bottom:-45px;
+	}
+	#footerBox{
+		margin-bottom:-90%;
+	}
 	.Ppic{
 		width:200px;
 		height:200px;
 	}
 	#name{
+		margin-top:1px;
+	}
+	#redirect-Tabs{
+		margin-top:2px;
+	}
+}
+@media only screen and (min-width : 1024px) {
+	#intro{
+		margin-top:130px;
+	}
+    .body{
+        height: auto;
+    }
+	#sendUp{
+		margin-left:95%; 
+	}
+	#footerBox{
+		margin-bottom:-100px;
+	}
+	.Ppic{
+		width:250px;
+		height:250px;
+	}
+	#name{
+	margin-top:1px;
 	height:auto;
 	}
+	#redirect-Tabs{
+		margin-top:2px;
+	}
+}
 
-}
-@media only screen and (max-height : 1024px) {
-    .body{
-        height: 1024px;
-    }
-	#footerBox{
-		margin-top:130px;
-	}
-	.Ppic{
-		width:300px;
-		height:300px;
-	}
-	#name{
-	margin-top:1px;
-	height:auto;
-	}
-	#redirect-Tabs{
-		margin-top:2px;
-	}
-}
-@media only screen and (max-height : 1366px) {
-    .body{
-        height: 1024px;
-    }
-	#footerBox{
-		margin-top:130px;
-	}
-	.Ppic{
-		width:455px;
-		height:455px;
-	}
-	#name{
-	margin-top:1px;
-	height:auto;
-	}
-	#redirect-Tabs{
-		margin-top:2px;
-	}
-}
-------------*/
