--- a/style.css
+++ b/style.css
@@ -26,12 +26,15 @@ body{
 	font-size: 7vw;
 }
 #redirect-Tabs{
-	margin-left:1px;
+	margin-left: auto;
+	margin-right: auto;
 	margin-top:-20px;
 	word-spacing:7px;
 }
 #social-Media-Tabs{
-	word-spacing: 5px;
+	margin-left: auto;
+	margin-right: auto;
+	word-spacing: 2px;
 	font-size:15px;
 }
 #About{
