--- a/style.css
+++ b/style.css
@@ -15,8 +15,7 @@ body{
 	min-height: 565px;
 }
 #introText{
-	color: Black;
-	
+	color: Black;	
 	width:100%;
 }
 #name{
@@ -34,6 +33,7 @@ body{
 #social-Media-Tabs{
 	margin-left: auto;
 	margin-right: auto;
+	padding-right: 3px;
 	word-spacing: 2px;
 	font-size:15px;
 }
