--- a/style.css
+++ b/style.css
@@ -5,17 +5,23 @@ body{
 }
 .Ppic{
 	border-radius:75%;
+	margin-left: auto;
+	margin-right: auto;
 	height:250px; 
 	width:250px;
 }
 
 #intro{
 	max-width:100%;
+	margin-left: auto;
+	margin-right: auto;
 	margin-top: 130px;
 	min-height: 565px;
 }
 #introText{
 	color: Black;	
+	margin-left: auto;
+	margin-right: auto;
 	width:100%;
 }
 #name{
@@ -48,7 +54,6 @@ body{
 	max-width:100%;
 	padding: 15px 30px 15px 30px; 
 	overflow:auto;
-	border-radius:4%;
 	height:550px;
 	box-shadow: 3px 3px 3px 3px gray;
 	border: 2px rigid;
@@ -70,32 +75,6 @@ body{
 	height:auto; 
 	color: white;
 	padding-top:10px;
-}
-.project-card{
-	background-color: silver;
-	width:45%;
-	box-shadow: 5px 5px 5px 5px gray;
-	height:100%;
-	border-radius:10%;
-	border-style:rigid;
-	padding: 10px 10px 10px 10px;
-}
-.project-info{
-	grid-template-areas:
-	'title title title picture picture picture'
-	'info info info picture picture picture'
-	'info info info picture picture picture'
-	'info info info picture picture picture'
-	'link link link picture picture picture';
-	display:grid;
-}
-.project-container{
-	display:grid;
-	width: 100%;
-	height:300px;
-	grid-gap: 1em;
-	grid-template-columns: repeat(auto-fit, minmax(40em, max-content));
-	justify-content: space-around;
 }
 #At, #resume, #projects{
 	font-size: 20px;
@@ -120,6 +99,29 @@ body{
 	text-decoration:none;
 	color: white;
 }
+
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+  height:3px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+
 
 @media only screen and (min-width : 320px) {
     .body{
@@ -246,7 +248,7 @@ body{
         height: auto;
     }
 	#sendUp{
-		margin-left:93%; 
+		margin-left:95%; 
 	}
 	#footerBox{
 		margin-bottom:-100px;
